# sp-500-ticker-history

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: release.yml  validate.yml
src/sp_500_ticker_history/: __init__.py  sp500-ticker-changes-2010.yaml  sp500-ticker-changes-2011.yaml  sp500-ticker-changes-2012.yaml  sp500-ticker-changes-2013.yaml  sp500-ticker-changes-2014.yaml  sp500-ticker-changes-2015.yaml  sp500-ticker-changes-2016.yaml  sp500-ticker-changes-2017.yaml  sp500-ticker-changes-2018.yaml  sp500-ticker-changes-2019.yaml  sp500-ticker-changes-2020.yaml  sp500-ticker-changes-2021.yaml  sp500-ticker-changes-2022.yaml  sp500-ticker-changes-2023.yaml  sp500-ticker-changes-2024.yaml  sp500-ticker-changes-2025.yaml  sp500-ticker-changes-2026.yaml  sp500tickers.py
tests/: helpers.py  test_basics.py  test_e2e.py  test_non_existent_year.py  test_sp500_2010.py  test_sp500_2011.py  test_sp500_2012.py  test_sp500_2013.py  test_sp500_2014.py  test_sp500_2015.py  test_sp500_2016.py  test_sp500_2017.py  test_sp500_2018.py  test_sp500_2019.py  test_sp500_2020.py  test_sp500_2021.py  test_sp500_2022.py  test_sp500_2023.py  test_sp500_2024.py  test_sp500_2025.py  test_sp500_2026.py
