[project]
name = "sp-500-ticker-history"
version = "2026.8.0"
description = "Sets of S&P 500 ticker symbols by date."
authors = [{ name = "Jeff McCarrell", email = "jeff@mccarrell.org" }]
requires-python = ">=3.14, <4"
license = "MIT"
dependencies = ["strictyaml>=1.7.3,<2"]

[dependency-groups]
dev = [
    "coverage",
    "mypy>=1.9.0,<2",
    "pytest",
    "ruff>=0.12.2",
]

[tool.uv]
default-groups = [
    "dev",
]

[build-system]
requires = ["uv_build>=0.8.0"]
build-backend = "uv_build"


[tool.coverage.run]
branch = true
parallel = true
source = ["sp_500_ticker_history", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
